2009-02-16  Christian Kellner  <gicmo@gnome.org>

	536305 – incorrect GError propagation in the htt

	* daemon/gvfsbackenddav.c: Convert soup errors to
	gio errors. Patch from Jesse van den Kieboom

2009-02-16  Alexander Larsson  <alexl@redhat.com>

	Bug 529349 – Redirects with username doesn't work

        * daemon/gvfsbackenddav.c: (redirect_handler):
	Copy username and password when redirecting.
	Patch from Mads Chr. Olesen

2009-02-16  Alexander Larsson  <alexl@redhat.com>

        Bug 566452 – Error when creating folder on webdav share

        * daemon/gvfsbackenddav.c:
        (redirect_handler):
	Don't intercept "201 Created" return as a redirection
	Patch from Mads Chr. Olesen

2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 570533 – use g_set_error_literal

	* daemon/gvfsbackendobexftp.c: (_push_single_file_helper):
	* daemon/gvfsbackendtrash.c: (trash_backend_get_file),
	(trash_backend_open_for_read), (trash_backend_delete),
	(trash_backend_pull):
	* daemon/trashlib/trashitem.c: (trash_item_delete):
	use g_set_error_literal() when appropriate.
	Patch by Christian Persch.

2009-02-13  Cosimo Cecchi  <cosimoc@gnome.org>

	Bug 531705 – Won't build with libarchive 1.3.1

	* configure.ac: check for archive_entry_filetype() instead of
	archive_read_open(). Patch from Tom Parker.

2009-02-05  Bastien Nocera  <hadess@hadess.net>

	Bug 563788 – GNOME Goal: Clean up GLib and GTK+ includes

	* client/gvfsuriutils.h:
	* daemon/gvfsbackendburn.c:
	* daemon/gvfsbackendcomputer.c:
	* daemon/gvfsbackenddnssd.c:
	* daemon/gvfsbackendnetwork.c:
	* daemon/gvfsdaemonutils.c:
	* daemon/mount.c: Fix build for single GTK+ include, patch
	from Luis Menina <liberforce@freeside.fr> (Closes: #563788)

2009-02-04  Ryan Lortie  <desrt@desrt.ca>

	Bug 570481 – Please add translator comments

	* daemon/gvfsbackendtrash.c: use clearer language to make it easier to
	translate (not to mention, easier to understand in English).
	
2009-02-03  Bastien Nocera  <hadess@hadess.net>
